# project-equilibrium

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  railway.json
backend/: Dockerfile  pyproject.toml  railway.toml  requirements-ml.txt  start.sh  start_combined.sh  test_filters.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_photos_smv.py  0003_communication_vector_schedule_datadecay.py  0004_photos_r2_key.py  0005_match_cache.py  0006_match_first_matched_at.py  0007_rescue_flag.py  0008_state_management.py  0009_match_status.py  0010_no_show_tracking.py  0011_match_candidates.py  50b418aabb0b_drop_language_column.py  8555f79346c0_add_verdict_notification_tracking.py  addindexes.py  bb3d5a63294f_add_lifestyle_fields_to_users.py  c1a2b3d4e5f6_add_invitations_table.py  d2e3f4a5b6c7_add_expires_at_to_invitations.py  e1f2a3b4c5d6_merge_heads.py  fixpk.py  lastmatched_add_last_matched_at.py  renamecols.py
backend/app/: main.py
backend/app/api/v1/: auth.py  debug.py  interview.py  invitations.py  matches.py  photos.py  profile.py  (+2 more)
backend/app/core/: config.py  database.py  deps.py  encryption.py  metrics.py  security.py
backend/app/models/: __init__.py  interview.py  invitation.py  match.py  match_cache.py  match_candidate.py  photo.py  psychometric.py  schedule.py  user.py
backend/app/schemas/: auth.py  interview.py  invitation.py  matches.py  profile.py  schedule.py
backend/app/services/: analysis_service.py  anonymizer.py  embedding_service.py  interview_service.py  matching_service.py  r2_service.py  smv_service.py
backend/app/workers/: celery_app.py  tasks.py
backend/docs/: matching-fairness.md
(+47 files in other folders)
